--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -903,8 +903,8 @@ flows:
                 task: deploy_flowLookupCPE
             25: 
                 task: deploy_flowLookupFSC
-            26: 
-                task: deploy_flowPickerFSC
+            #26: 
+            #    task: deploy_flowPickerFSC
             #27: 
             #    task: deploy_FlowScreenComponentsBasePack
             28: 
